# homeviewx11

./: .gitignore  CLAUDE.md  DESIGN.md  HomeView_PRD_Version2.md  README.md  pyproject.toml
.cavekit/: config  task-status.json  tasks.json
.claude/rules/: homeviewx11-api-conventions.md  homeviewx11-project.md  homeviewx11-testing.md
context/designs/: CLAUDE.md  design-changelog.md
context/kits/: cavekit-overview.md  cavekit-pwa-scaffold.md  cavekit-pwa-screens.md  cavekit-pwa-state.md  cavekit-pwa-tests.md  cavekit-server-gaps.md
context/plans/: build-site.md
docs/plans/: 2026-04-12-homeview-v1-server.md
docs/prd/: 2026-04-12-homeview-multi-stream-video-wall.md
layouts/: 2x2.json  hero_3side.json  pip.json  side_by_side.json  single.json
pwa/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
pwa/src/: App.tsx  main.tsx
scripts/: homeview.service
server/: cli.py  config.py  db.py  main.py  models.py
server/api/: dependencies.py  events.py  routes.py  websocket.py
server/audio/: router.py
server/auth/: middleware.py  pairing.py  tokens.py
server/composition/: cell.py  display.py  engine.py  health.py  interactive.py  layout.py  overlay.py  window.py
server/presets/: manager.py
server/sources/: registry.py
tests/: conftest.py  test_api.py  test_audio.py  test_auth.py  test_cell.py  test_config.py  test_db.py  test_display.py  test_engine.py  test_health.py  test_integration.py  test_interactive.py  test_layout.py  test_main.py  test_models.py  test_presets.py  test_sources.py  test_websocket.py  test_window.py
(+7 files in other folders)
